# gpsd_prometheus_exporter

./: .bumpversion.cfg  README.md  pyproject.toml
gpsd_prometheus_exporter/: main.py
tests/: test_exporter.py
